--- a/desafio-css/docs/getit.css
+++ b/desafio-css/docs/getit.css
@@ -22,59 +22,136 @@ Algumas informações úteis e dicas:
   - Sombra: https://codepen.io/sdthornton/pen/wBZdXq
  */
 
-html,
-body {
-  font-family: "Roboto", sans-serif;
-}
-
-/* Você pode usar o CSS comentado abaixo, se ajudar */
-/* Fonte: https://codepen.io/CrisWoler/pen/ogXBLj */
-/* .btn {
-  position: relative;
-  display: block;
-  padding: 10px 15px;
-
-  overflow: hidden;
-
-  border-width: 0;
-  outline: none;
-  border-radius: 2px;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.6);
-
-  background-color: #f7d736;
-
-  transition: background-color 0.3s;
-}
-
-.btn > * {
-  position: relative;
-}
-
-.btn:before {
-  content: "";
-
-  position: absolute;
-  top: 50%;
-  left: 50%;
-
-  display: block;
-  width: 0;
-  padding-top: 0;
-
-  border-radius: 100%;
-
-  background-color: rgba(236, 240, 241, 0.3);
-
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
-.btn:active:before {
-  width: 120%;
-  padding-top: 120%;
-
-  transition: width 0.2s ease-out, padding-top 0.2s ease-out;
-} */
+ html,
+ body {
+   font-family: "Roboto", sans-serif;
+ }
+ 
+ h3{
+   font-family: 'Permanent Marker', cursive;
+   font-size: 1.2rem;
+ }
+ 
+ p{
+   display: flex;
+   font-family: 'Permanent Marker', cursive;
+   color: #4c4c4c;
+   justify-content: center;
+ }
+ 
+ .logo{
+   width: 5%;
+   padding: 7px;
+ }
+ 
+ .appbar{
+   display: flex;
+   background-color: #f7d736;
+   align-items: center;
+   justify-content: flex-start;
+   gap: 10px;
+   box-shadow: 0 4px 10px rgba(0,0,0,0.5)
+ }
+ 
+ .container{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   padding: 20px;
+ }
+ 
+ .form-card{
+   display: flex;
+   flex-direction: column;
+   gap: 10px;
+   width: 500px;
+   height: 100px;
+   margin: 20px;
+   box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+   padding: 10px;
+   border-radius: 10px;
+ }
+ 
+ .form-card-title{
+   border: none;
+   font-size: 1.3rem;
+ }
+ 
+ .autoresize{
+   border: none;
+ }
+ 
+ .card-container{
+   display: flex;
+   flex-wrap: wrap;
+   flex-direction: row;
+   margin: 10px;
+   justify-content: space-around;
+ }
+ 
+ .card{
+   display: flex;
+   background-color: #ead3a7;
+   padding: 10px;
+   width: 200px;
+   height: 110px;
+   flex-direction: column;
+   gap: 10px;
+   border-radius: 10px;
+   box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+   margin: 10px;
+ }
+ 
+ /* Você pode usar o CSS comentado abaixo, se ajudar */
+ /* Fonte: https://codepen.io/CrisWoler/pen/ogXBLj */
+ 
+ .btn {
+   position: relative;
+   display: block;
+   padding: 10px 15px;
+ 
+   overflow: hidden;
+ 
+   border-width: 0;
+   outline: none;
+   border-radius: 2px;
+   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.6);
+ 
+   background-color: #f7d736;
+ 
+   transition: background-color 0.3s;
+ }
+ 
+ .btn > * {
+   position: relative;
+ }
+ 
+ .btn:before {
+   content: "";
+ 
+   position: absolute;
+   top: 50%;
+   left: 50%;
+ 
+   display: block;
+   width: 0;
+   padding-top: 0;
+ 
+   border-radius: 100%;
+ 
+   background-color: rgba(236, 240, 241, 0.3);
+ 
+   -webkit-transform: translate(-50%, -50%);
+   -moz-transform: translate(-50%, -50%);
+   -ms-transform: translate(-50%, -50%);
+   -o-transform: translate(-50%, -50%);
+   transform: translate(-50%, -50%);
+ }
+ 
+ .btn:active:before {
+   width: 120%;
+   padding-top: 120%;
+ 
+   transition: width 0.2s ease-out, padding-top 0.2s ease-out;
+ }
+ 
